--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -65,49 +65,141 @@
 
 The interrupts can be controlled via the RISC-V MIE (Machine Interrupt Enable) and MIP (Machine Interrupt Pending) CSR registers.
 
-| Interrupt number | Description                          |
-| ---------------: | ------------------------------------ |
-|            0 - 6 | -                                    |
-|                7 | Machine timer interrupt              |
-|           8 - 15 | -                                    |
-|               16 | V-blank interrupt                    |
-|               17 | Line interrupt                       |
-|               18 | PCM FIFO threshold interrupt         |
-|               19 | Keybuf FIFO not empty interrupt      |
-|               20 | ESP UART RX FIFO not empty interrupt |
-|          21 - 31 | -                                    |
+| Interrupt number | Description                              |
+| ---------------: | ---------------------------------------- |
+|            0 - 6 | -                                        |
+|                7 | Machine timer interrupt                  |
+|           8 - 15 | -                                        |
+|               16 | V-blank interrupt                        |
+|               17 | Line interrupt                           |
+|               18 | PCM FIFO threshold interrupt             |
+|               19 | Keyboard buffer FIFO not empty interrupt |
+|               20 | ESP UART RX FIFO not empty interrupt     |
+|          21 - 31 | -                                        |
 
 Interrupts 16 and 17 are latching, which means they have to cleared by clearing the bit in the MIP register. The other interrupts will be automatically cleared in the MIP register when the interrupt conditional no longer is present.
 
+# ESP interface
+
+This is used to communicate with the Aq+ ESP32. For example to perform file system access.
+
 ## ESP STATUS
 
-| 31:2 |      1      |        0         |
-| :--: | :---------: | :--------------: |
-|  -   | TX full (R) | RX not empty (R) |
+| Bits | Name | Description                   |
+| ---: | ---- | ----------------------------- |
+| 31:2 | -    | -                             |
+|    1 | TXF  | TX FIFO full (read-only)      |
+|    0 | RXNE | RX FIFO not empty (read-only) |
 
 ## ESP DATA
 
-| 31:9 |        8         | 7:0  |
-| :--: | :--------------: | :--: |
-|  -   | Start of message | Data |
+| Bits | Name | Description                                                                              |
+| ---: | ---- | ---------------------------------------------------------------------------------------- |
+| 31:9 | -    | -                                                                                        |
+|    8 | SOM  | Start of message. Writing a 1 to this bit will signal the start of a message to the ESP. |
+|  7:0 | DATA | Data to transmit. (This field is ignored is SOM=1)                                       |
 
-## VCTRL
+# Graphics engine
 
-| 31:6 |   5    |            4             |   3    |       2       |       1        |    0    |
-| :--: | :----: | :----------------------: | :----: | :-----------: | :------------: | :-----: |
-|  -   | Spr_en | Gfx_mode: bm(0), tile(1) | Gfx_en | Text_priority | Text_80columns | Text_en |
+## VCTRL register
+
+| Bits | Name     | Description                                                      |
+| ---: | -------- | ---------------------------------------------------------------- |
+| 31:6 | -        | -                                                                |
+|    5 | SPREN    | Enable sprites                                                   |
+|    4 | GFXMODE  | Graphics mode: 0:bitmap mode, 1:tile mode                        |
+|    3 | GFXEN    | Enable graphics                                                  |
+|    2 | TEXTPRIO | 0:Render text behind graphics, 1:Render text in fron of graphics |
+|    1 | TEXT80   | 0:40 columns mode, 1:80 columns mode                             |
+|    0 | TEXTEN   | Enable text                                                      |
+
+## VSCRX register
+
+This register controls the horizontal scrolling position in both tile and bitmap modes.
+
+| Bits | Name | Description                        |
+| ---: | ---- | ---------------------------------- |
+| 31:9 | -    | -                                  |
+|  8:0 | SCRX | Horizontal scroll position (0-511) |
+
+## VSCRY register
+
+This register controls the vertical scrolling position in both tile and bitmap modes.
+
+| Bits | Name | Description                      |
+| ---: | ---- | -------------------------------- |
+| 31:8 | -    | -                                |
+|  7:0 | SCRY | Vertical scroll position (0-255) |
+
+## VLINE register
+
+| Bits | Name | Description                      |
+| ---: | ---- | -------------------------------- |
+| 31:8 | -    | -                                |
+|  8:0 | LINE | Current line (read-only) (0-262) |
+
+## VIRQLINE register
+
+| Bits | Name | Description                                                                                         |
+| ---: | ---- | --------------------------------------------------------------------------------------------------- |
+| 31:8 | -    | -                                                                                                   |
+|  8:0 | LINE | Line number to signal the line interrupt at. Interrupt is signalled at the last pixel of this line. |
+
+# Keyboard interface
+
+| Bits | Name | Description                      |
+| ---: | ---- | -------------------------------- |
+| 31:8 | -    | -                                |
+|  7:0 | SCRY | Vertical scroll position (0-255) |
+
+## KEYBUF register
+
+The keyboard FIFO buffer has 15 entries of 16-bits each.
+
+|  Bits | Name  | Description                      |
+| ----: | ----- | -------------------------------- |
+|    31 | EMPTY | Set when keyboard FIFO is empty. |
+| 30:16 | -     | -                                |
+|  15:0 | DATA  | Data from FIFO                   |
+
+Data format (defined by ESP firmware):
+
+| Bits | Description                 |
+| ---: | --------------------------- |
+|   15 | -                           |
+|   14 | 1:Scancode / 0:Character    |
+|   13 | Scancode key 0:up / 1:down  |
+|   12 | 1:Repeated                  |
+|   11 | Modifier key pressed: Gui   |
+|   10 | Modifier key pressed: Alt   |
+|    9 | Modifier key pressed: Shift |
+|    8 | Modifier key pressed: Ctrl  |
+|  7:0 | Character / Scancode        |
 
 ## Sprite attributes
 
-| 31:16 |    15    |  14:13  |   12   |   11   |    10     |       9:0        |
-| :---: | :------: | :-----: | :----: | :----: | :-------: | :--------------: |
-|   -   | Priority | Palette | V-flip | H-flip | Height:16 | Tile index (9:0) |
+|  Bits | Name  | Description                                            |
+| ----: | ----- | ------------------------------------------------------ |
+| 31:16 | -     | -                                                      |
+|    15 | PRIO  | If set, render sprite above non-priority sprites/tiles |
+| 14:13 | PAL   | Palette for this sprite (0-3)                          |
+|    12 | VFLIP | Flip the sprite vertically                             |
+|    11 | HFLIP | Flip the sprite horizontally                           |
+|    10 | H16   | Sprite height 0:8 pixels, 1:16 pixels                  |
+|   9:0 | IDX   | Tile index (0-1023)                                    |
 
 ## Sprite positions
 
-| 31:25 | 24:16 | 15:8 | 7:0 |
-| :---: | :---: | :--: | :-: |
-|   -   |   Y   |  -   |  X  |
+Sprites will wrap around edge of screen. For example setting the X position of the sprite to 511, will only show the rightmost 7 pixels of the sprite on the left side of the screen.
+
+Sprites can be hidden by positioning them off-screen. The most efficient position for this is putting them vertically off-screen, this will prevent them from being rendered. Since a sprite can be 16-pixels tall, the vertical position that works for both 8 and 16 pixel tall sprites is 240.
+
+|  Bits | Name | Description                                                        |
+| ----: | :--: | ------------------------------------------------------------------ |
+| 31:25 |  -   | -                                                                  |
+| 24:16 |  Y   | Vertical position of sprite (0-255). Set to 240 to disable sprite. |
+|  15:9 |  -   | -                                                                  |
+|   8:0 |  X   | Horizontal position of sprite (0-511).                             |
 
 # Video RAM data
 
@@ -126,6 +218,8 @@ Interrupts 16 and 17 are latching, which means they have to cleared by clearing 
 | Priority | Palette | V-flip | H-flip |  -  | Tile index (9:0) |
 
 # PCM playback
+
+The PCM playback unit allow playing back 16-bit stereo PCM samples. The samples are buffered in a FIFO buffer that holds up to 1023 samples. This allows for writing samples in bursts, for example at each V-Blank interval.
 
 ### Register 0 status register
 
@@ -181,70 +275,121 @@ Sample data should be in signed 16-bit format.
 
 # FM synthesizer
 
+The FM synthesizer is based on the architecture of the OPL3 sound chip.
+As such, OPL3 sound banks can be used on the Aq32 FM synthesizer.
+
+Differences between the Aq32 FM synthesizer and OPL3 are:
+
+| Aq32 FM synthesizer                                     | OPL3                                                |
+| ------------------------------------------------------- | --------------------------------------------------- |
+| 32 2-op channels configurable up to 16 4-op channels    | 18 2-op channels configurable up to 6 4-op channels |
+| Panning control for each channel                        | Hard pan left/right/both                            |
+| Not supported (Can be recreated using regular channels) | 3 channels can be converted into 5 rhythm sounds    |
+| No timers (Use 60Hz V-Blank interrupt for timing)       | 2 Programmable timers                               |
+
 ### Register 0 OP_4CH
 
 This register indicates what channel pairs are used as 4-channel operator.
 
-| 31:16 |    15    |    14    |    13    |    12    |    11    |    10    |    9     |    8     |    7     |    6     |    5     |   4    |   3    |   2    |   1    |   0    |
-| :---: | :------: | :------: | :------: | :------: | :------: | :------: | :------: | :------: | :------: | :------: | :------: | :----: | :----: | :----: | :----: | :----: |
-|   -   | CH 31/30 | CH 29/28 | CH 27/26 | CH 25/24 | CH 23/22 | CH 21/20 | CH 19/18 | CH 17/16 | CH 15/14 | CH 13/12 | CH 11/10 | CH 9/8 | CH 7/6 | CH 5/4 | CH 3/2 | CH 1/0 |
+|   Bit | Name     | Description                                     |
+| ----: | -------- | ----------------------------------------------- |
+| 31:16 | -        |                                                 |
+|    15 | CH 31/30 | If set, channel 31/30 form a 4-operator channel |
+|    14 | CH 29/28 | If set, channel 29/28 form a 4-operator channel |
+|    13 | CH 27/26 | If set, channel 27/26 form a 4-operator channel |
+|    12 | CH 25/24 | If set, channel 25/24 form a 4-operator channel |
+|    11 | CH 23/22 | If set, channel 23/22 form a 4-operator channel |
+|    10 | CH 21/20 | If set, channel 21/20 form a 4-operator channel |
+|     9 | CH 19/18 | If set, channel 19/18 form a 4-operator channel |
+|     8 | CH 17/16 | If set, channel 17/16 form a 4-operator channel |
+|     7 | CH 15/14 | If set, channel 15/14 form a 4-operator channel |
+|     6 | CH 13/12 | If set, channel 13/12 form a 4-operator channel |
+|     5 | CH 11/10 | If set, channel 11/10 form a 4-operator channel |
+|     4 | CH 9/8   | If set, channel 9/8 form a 4-operator channel   |
+|     3 | CH 7/6   | If set, channel 7/6 form a 4-operator channel   |
+|     2 | CH 5/4   | If set, channel 5/4 form a 4-operator channel   |
+|     1 | CH 3/2   | If set, channel 3/2 form a 4-operator channel   |
+|     0 | CH 1/0   | If set, channel 1/0 form a 4-operator channel   |
 
 ### Register 1 GLOBAL
 
-| 31:8 |  7  |  6  | 5:0 |
-| :--: | :-: | :-: | :-: |
-|  -   | DAM | DVB |  -  |
-
-| Name | Description                |
-| ---- | -------------------------- |
-| DAM  | Amplitude modulation depth |
-| DVB  | Vibrato depth              |
+|  Bit | Name | Description                |
+| ---: | ---- | -------------------------- |
+| 31:8 | -    | -                          |
+|    7 | DAM  | Amplitude modulation depth |
+|    6 | DVB  | Vibrato depth              |
+|  5:0 | -    | -                          |
 
 ### Register 2 KEY_ON
 
 Each bit in this register controls the Key-on signal of each channel
 
+| Bit | Name    | Description       |
+| --: | ------- | ----------------- |
+|  31 | KEYON31 | Key-on channel 31 |
+|  30 | KEYON30 | Key-on channel 30 |
+|  29 | KEYON29 | Key-on channel 29 |
+|  28 | KEYON28 | Key-on channel 28 |
+|  27 | KEYON27 | Key-on channel 27 |
+|  26 | KEYON26 | Key-on channel 26 |
+|  25 | KEYON25 | Key-on channel 25 |
+|  24 | KEYON24 | Key-on channel 24 |
+|  23 | KEYON23 | Key-on channel 23 |
+|  22 | KEYON22 | Key-on channel 22 |
+|  21 | KEYON21 | Key-on channel 21 |
+|  20 | KEYON20 | Key-on channel 20 |
+|  19 | KEYON19 | Key-on channel 19 |
+|  18 | KEYON18 | Key-on channel 18 |
+|  17 | KEYON17 | Key-on channel 17 |
+|  16 | KEYON16 | Key-on channel 16 |
+|  15 | KEYON15 | Key-on channel 15 |
+|  14 | KEYON14 | Key-on channel 14 |
+|  13 | KEYON13 | Key-on channel 13 |
+|  12 | KEYON12 | Key-on channel 12 |
+|  11 | KEYON11 | Key-on channel 11 |
+|  10 | KEYON10 | Key-on channel 10 |
+|   9 | KEYON9  | Key-on channel 9  |
+|   8 | KEYON8  | Key-on channel 8  |
+|   7 | KEYON7  | Key-on channel 7  |
+|   6 | KEYON6  | Key-on channel 6  |
+|   5 | KEYON5  | Key-on channel 5  |
+|   4 | KEYON4  | Key-on channel 4  |
+|   3 | KEYON3  | Key-on channel 3  |
+|   2 | KEYON2  | Key-on channel 2  |
+|   1 | KEYON1  | Key-on channel 1  |
+|   0 | KEYON0  | Key-on channel 0  |
+
 ### Registers 96-127 Channel attributes
 
-| 31:27 | 26:20 | 19:17 | 16  | 15:13 | 12:10 | 9:0  |
-| :---: | :---: | :---: | :-: | :---: | :---: | :--: |
-|   -   |  PAN  |  FB   | ALG |   -   | BLOCK | FNUM |
-
-| Name  | Description                                    |
-| ----- | ---------------------------------------------- |
-| PAN   | 0:No Audio, 1:Left, 64:Center, 127:Right       |
-| FB    | Modulation depth for slot 1 FM feed back (0-7) |
-| ALG   | Operation connection (algorithm)               |
-| KON   | Key on                                         |
-| BLOCK | Octave (0-7)                                   |
-| FNUM  | Frequency number (10 bit)                      |
+|  Bits | Name  | Description                                    |
+| ----: | ----- | ---------------------------------------------- |
+| 31:27 | -     | -                                              |
+| 26:20 | PAN   | 0:No Audio, 1:Left, 64:Center, 127:Right       |
+| 19:17 | FB    | Modulation depth for slot 1 FM feed back (0-7) |
+|    16 | ALG   | Operation connection (algorithm)               |
+| 15:13 | -     | -                                              |
+| 12:10 | BLOCK | Octave (0-7)                                   |
+|   9:0 | FNUM  | Frequency number (10 bit)                      |
 
 ### Registers 128-191 Operator attributes 0
 
-| 31  | 30  | 29  | 28  | 27:24 | 23:22 | 21:16 | 15:12 | 11:8 | 7:4 | 3:0 |
-| :-: | :-: | :-: | :-: | :---: | :---: | :---: | :---: | :--: | :-: | --- |
-| AM  | VIB | SUS | KSR | MULT  |  KSL  |  TL   |  AR   |  DR  | SL  | RR  |
-
-| Name | Description                                   |
-| ---- | --------------------------------------------- |
-| AM   | Amplitude modulation (Tremelo)                |
-| VIB  | Vibrato                                       |
-| SUS  | 0:Skip sustain phase, 1:Sustain until key off |
-| KSR  | Key scale rate                                |
-| MULT | Frequency data multiplier (0-15)              |
-| KSL  | Key scale level (0-3)                         |
-| TL   | Total level (0-63)                            |
-| AR   | Attack Rate (0-15)                            |
-| DR   | Decay Rate (0-15)                             |
-| SL   | Sustain Level (0-15)                          |
-| RR   | Release Rate (0-15)                           |
+|  Bits | Name | Description                                   |
+| ----: | ---- | --------------------------------------------- |
+|    31 | AM   | Amplitude modulation (Tremelo)                |
+|    30 | VIB  | Vibrato                                       |
+|    29 | SUS  | 0:Skip sustain phase, 1:Sustain until key off |
+|    28 | KSR  | Key scale rate                                |
+| 27:24 | MULT | Frequency data multiplier (0-15)              |
+| 23:22 | KSL  | Key scale level (0-3)                         |
+| 21:16 | TL   | Total level (0-63)                            |
+| 15:12 | AR   | Attack Rate (0-15)                            |
+|  11:8 | DR   | Decay Rate (0-15)                             |
+|   7:4 | SL   | Sustain Level (0-15)                          |
+|   3:0 | RR   | Release Rate (0-15)                           |
 
 ### Registers 192-255 Operator attributes 1
 
-| 31:3 | 2:0 |
-| :--: | --- |
-|  -   | WS  |
-
-| Name | Description       |
-| ---- | ----------------- |
-| WS   | Wave select (0-7) |
+| Bits | Name | Description       |
+| ---: | ---- | ----------------- |
+| 31:3 | -    | -                 |
+|  2:0 | WS   | Wave select (0-7) |
