Lots of graphics improvements.

--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -22,9 +22,9 @@
 | 02090 - 023FF |        - | -                                 |
 | 02400 - 027FF |      32b | PCM playback                      |
 | 02800 - 02FFF |      32b | FM synthesizer                    |
-| 03000 - 030FF |      32b | Sprite attributes (64x32b)        |
-| 03100 - 031FF |      32b | Sprite positions (64x32b)         |
-| 03200 - 03FFF |        - | -                                 |
+| 03000 - 033FF |      32b | Sprite attributes (256x32b)       |
+| 03400 - 037FF |      32b | Sprite positions (256x32b)        |
+| 03800 - 03FFF |        - | -                                 |
 | 04000 - 0407F |      16b | Palette (4x16 entries)            |
 | 04080 - 04FFF |        - | -                                 |
 | 05000 - 057FF |       8b | Character RAM (2kB)               |
@@ -101,11 +101,17 @@ This is used to communicate with the Aq+ ESP32. For example to perform file syst
 
 # Graphics engine
 
+- Tile map size: 64x32
+- 256 8x8 or 8x16 sprites
+- Bitmap mode 320x200 @ 4bpp
+- 8 16-color palettes for 128 colors on-screen out of 4096 possible colors
+
 ## VCTRL register
 
 | Bits | Name     | Description                                                      |
 | ---: | -------- | ---------------------------------------------------------------- |
-| 31:6 | -        | -                                                                |
+| 31:7 | -        | -                                                                |
+|    6 | L2EN     | Enable tile layer 2 (only available when GFXMODE=1)              |
 |    5 | SPREN    | Enable sprites                                                   |
 |    4 | GFXMODE  | Graphics mode: 0:bitmap mode, 1:tile mode                        |
 |    3 | GFXEN    | Enable graphics                                                  |
@@ -178,15 +184,15 @@ Data format (defined by ESP firmware):
 
 ## Sprite attributes
 
-|  Bits | Name  | Description                                            |
-| ----: | ----- | ------------------------------------------------------ |
-| 31:16 | -     | -                                                      |
-|    15 | PRIO  | If set, render sprite above non-priority sprites/tiles |
-| 14:13 | PAL   | Palette for this sprite (0-3)                          |
-|    12 | VFLIP | Flip the sprite vertically                             |
-|    11 | HFLIP | Flip the sprite horizontally                           |
-|    10 | H16   | Sprite height 0:8 pixels, 1:16 pixels                  |
-|   9:0 | IDX   | Tile index (0-1023)                                    |
+|  Bits | Name   | Description                                                                                           |
+| ----: | ------ | ----------------------------------------------------------------------------------------------------- |
+| 31:18 | -      | -                                                                                                     |
+| 17:16 | ZDEPTH | Z-depth to render at (0:sprite disabled,1:below bottom layer,2:between layer 1/2,3:on top of layer 2) |
+| 15:13 | PAL    | Palette for this sprite (0-7)                                                                         |
+|    12 | VFLIP  | Flip the sprite vertically                                                                            |
+|    11 | HFLIP  | Flip the sprite horizontally                                                                          |
+|    10 | H16    | Sprite height 0:8 pixels, 1:16 pixels                                                                 |
+|   9:0 | IDX    | Tile index (0-1023)                                                                                   |
 
 ## Sprite positions
 
@@ -207,15 +213,20 @@ Sprites can be hidden by positioning them off-screen. The most efficient positio
 | --------- | ---------------------------------- |
 | 0000-7FFF | Tile data (overlaps with tile map) |
 | 0000-7CFF | Bitmap data                        |
-| 7000-7FFF | Tile map                           |
+| 6000-6FFF | Tile map layer 2 (z-depth=3)       |
+| 7000-7FFF | Tile map layer 1 (z-depth=2)       |
 
 ## Tile map
 
 64x32 entries, each with the following format:
 
-|    15    |  14:13  |   12   |   11   | 10  |       9:0        |
-| :------: | :-----: | :----: | :----: | :-: | :--------------: |
-| Priority | Palette | V-flip | H-flip |  -  | Tile index (9:0) |
+|  Bits | Name  | Description                                                                |
+| ----: | ----- | -------------------------------------------------------------------------- |
+| 15:13 | PAL   | Palette for this tile (0-7)                                                |
+|    12 | VFLIP | Flip the tile vertically                                                   |
+|    11 | HFLIP | Flip the tile horizontally                                                 |
+|    10 | PRIO  | Render the tile above sprites with the same z-depth (Layer1: 2, Layer2: 3) |
+|   9:0 | IDX   | Tile index (0-1023)                                                        |
 
 # PCM playback
 
