Reorganizing register addresses.

--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -8,13 +8,18 @@
 | 00800 - 01FFF |        - | -                                 |
 | 02000         |      32b | ESP STATUS                        |
 | 02004         |      32b | ESP DATA                          |
-| 02008         |      32b | VCTRL                             |
-| 0200C         |      32b | VSCRX                             |
-| 02010         |      32b | VSCRY                             |
-| 02014         |      32b | VLINE                             |
-| 02018         |      32b | VIRQLINE                          |
-| 0201C         |      32b | KEYBUF                            |
-| 02020 - 0207C |        - | -                                 |
+| 02008 - 0200C |      32b | -                                 |
+| 02010         |      32b | KEYBUF                            |
+| 02014 - 0203C |      32b | -                                 |
+| 02040         |      32b | VCTRL                             |
+| 02044         |        - | -                                 |
+| 02048         |      32b | VLINE                             |
+| 0204C         |      32b | VIRQLINE                          |
+| 02050         |      32b | VSCRX1                            |
+| 02054         |      32b | VSCRY1                            |
+| 02058         |      32b | VSCRX2                            |
+| 0205C         |      32b | VSCRY2                            |
+| 02060 - 0207C |        - | -                                 |
 | 02080         |      32b | RISC-V mtime register             |
 | 02084         |      32b | RISC-V mtimeh register            |
 | 02088         |      32b | RISC-V mtimecmp register          |
@@ -25,8 +30,8 @@
 | 03000 - 033FF |      32b | Sprite attributes (256x32b)       |
 | 03400 - 037FF |      32b | Sprite positions (256x32b)        |
 | 03800 - 03FFF |        - | -                                 |
-| 04000 - 0407F |      16b | Palette (4x16 entries)            |
-| 04080 - 04FFF |        - | -                                 |
+| 04000 - 040FF |      16b | Palette (8x16 entries)            |
+| 04100 - 04FFF |        - | -                                 |
 | 05000 - 057FF |       8b | Character RAM (2kB)               |
 | 05800 - 05FFF |        - | -                                 |
 | 06000 - 07FFF | 8/16/32b | Text RAM (8kB)                    |
@@ -119,18 +124,18 @@ This is used to communicate with the Aq+ ESP32. For example to perform file syst
 |    1 | TEXT80   | 0:40 columns mode, 1:80 columns mode                             |
 |    0 | TEXTEN   | Enable text                                                      |
 
-## VSCRX register
+## VSCRX1/VSCRX2 register
 
-This register controls the horizontal scrolling position in both tile and bitmap modes.
+This register controls the horizontal scrolling position in both tile (VSCRX1/VSCRX2) and bitmap modes (VSCRX1 only).
 
 | Bits | Name | Description                        |
 | ---: | ---- | ---------------------------------- |
 | 31:9 | -    | -                                  |
 |  8:0 | SCRX | Horizontal scroll position (0-511) |
 
-## VSCRY register
+## VSCRY1/VSCRY2 register
 
-This register controls the vertical scrolling position in both tile and bitmap modes.
+This register controls the vertical scrolling position in both tile (VSCRY1/VSCRY2) and bitmap modes (VSCRY1 only).
 
 | Bits | Name | Description                      |
 | ---: | ---- | -------------------------------- |
@@ -198,14 +203,12 @@ Data format (defined by ESP firmware):
 
 Sprites will wrap around edge of screen. For example setting the X position of the sprite to 511, will only show the rightmost 7 pixels of the sprite on the left side of the screen.
 
-Sprites can be hidden by positioning them off-screen. The most efficient position for this is putting them vertically off-screen, this will prevent them from being rendered. Since a sprite can be 16-pixels tall, the vertical position that works for both 8 and 16 pixel tall sprites is 240.
-
-|  Bits | Name | Description                                                        |
-| ----: | :--: | ------------------------------------------------------------------ |
-| 31:25 |  -   | -                                                                  |
-| 24:16 |  Y   | Vertical position of sprite (0-255). Set to 240 to disable sprite. |
-|  15:9 |  -   | -                                                                  |
-|   8:0 |  X   | Horizontal position of sprite (0-511).                             |
+|  Bits | Name | Description                            |
+| ----: | :--: | -------------------------------------- |
+| 31:25 |  -   | -                                      |
+| 24:16 |  Y   | Vertical position of sprite (0-255).   |
+|  15:9 |  -   | -                                      |
+|   8:0 |  X   | Horizontal position of sprite (0-511). |
 
 # Video RAM data
 
