Gamepad, key matrix and hand controller support.

--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -10,7 +10,11 @@
 | 02004         |      32b | ESP DATA                          |
 | 02008 - 0200C |      32b | -                                 |
 | 02010         |      32b | KEYBUF                            |
-| 02014 - 0203C |      32b | -                                 |
+| 02014         |        - | -                                 |
+| 02018 / 0201C |  32b/32b | KEYS (64b)                        |
+| 02020 / 02024 |  32b/32b | GAMEPAD1 (64b)                    |
+| 02028 / 0202C |  32b/32b | GAMEPAD2 (64b)                    |
+| 02030 - 0203C |      32b | -                                 |
 | 02040         |      32b | VCTRL                             |
 | 02044         |        - | -                                 |
 | 02048         |      32b | VLINE                             |
