--- a/aq32/fpga/src/aq32.md
+++ b/aq32/fpga/src/aq32.md
@@ -10,7 +10,7 @@
 | 02004         |      32b | ESP DATA                          |
 | 02008 - 0200C |      32b | -                                 |
 | 02010         |      32b | KEYBUF                            |
-| 02014         |        - | -                                 |
+| 02014         |      32b | HCTRL                             |
 | 02018 / 0201C |  32b/32b | KEYS (64b)                        |
 | 02020 / 02024 |  32b/32b | GAMEPAD1 (64b)                    |
 | 02028 / 0202C |  32b/32b | GAMEPAD2 (64b)                    |
