--- a/aq32/docs/aq32.md
+++ b/aq32/docs/aq32.md
@@ -1,4 +1,4 @@
-# Aquarius32 TRM
+# Aquarius32 Technical Reference Manual
 
 ## Memory map
 
@@ -65,8 +65,8 @@
 | 0x344 | mip      | Machine interrupt pending                                  |
 | 0xB00 | mcycle   | Machine cycle counter                                      |
 | 0xB80 | mcycleh  | Upper 32 bits of mcycle                                    |
-| 0xC00 | cycle    | Cycle counter (same as cycle) (incrementing at 25.175MHz)  |
-| 0xC80 | cycleh   | Upper 32 bits of cycle (same as cycleh)                    |
+| 0xC00 | cycle    | Cycle counter (same as mcycle) (incrementing at 25.175MHz) |
+| 0xC80 | cycleh   | Upper 32 bits of cycle (same as mcycleh)                   |
 | 0xC01 | time     | Machine time counter (same as mtime at address 0x02080)    |
 | 0xC81 | timeh    | Upper 32 bits of mtime (same as mtimeh at address 0x02084) |
 
@@ -117,16 +117,17 @@ This is used to communicate with the Aq+ ESP32. For example to perform file syst
 
 ## VCTRL register
 
-| Bits | Name     | Description                                                      |
-| ---: | -------- | ---------------------------------------------------------------- |
-| 31:7 | -        | -                                                                |
-|    6 | L2EN     | Enable tile layer 2 (only available when GFXMODE=1)              |
-|    5 | SPREN    | Enable sprites                                                   |
-|    4 | GFXMODE  | Graphics mode: 0:bitmap mode, 1:tile mode                        |
-|    3 | GFXEN    | Enable graphics                                                  |
-|    2 | TEXTPRIO | 0:Render text behind graphics, 1:Render text in fron of graphics |
-|    1 | TEXT80   | 0:40 columns mode, 1:80 columns mode                             |
-|    0 | TEXTEN   | Enable text                                                      |
+| Bits | Name     | Description                                                       |
+| ---: | -------- | ----------------------------------------------------------------- |
+| 31:7 | -        | -                                                                 |
+|    6 | L2EN     | Enable tile layer 2 (only available when GFXMODE=1)               |
+|    5 | SPREN    | Enable sprites                                                    |
+|    4 | GFXMODE  | Graphics mode: 0:bitmap mode, 1:tile mode                         |
+|    3 | GFXEN    | Enable graphics                                                   |
+|    2 | TEXTPRIO | 0:Render text behind graphics, 1:Render text in front of graphics |
+|    1 | TEXT80   | 0:40 columns mode, 1:80 columns mode                              |
+|    0 | TEXTEN   | Enable text                                                       |
+
 
 ## VSCRX1/VSCRX2 register
 
@@ -251,11 +252,11 @@ Writing to this register will reset the FIFO buffer and thus flush any samples s
 
 ### Register 1 FIFO control register
 
-| 31:10 |          9:0           |
-| :---: | :--------------------: |
-|   -   | FIFO IRQ treshold (RW) |
+| 31:10 |           9:0           |
+| :---: | :---------------------: |
+|   -   | FIFO IRQ threshold (RW) |
 
-As long as _FIFO count_ is lower than _FIFO IRQ treshold_, an interrupt is generated.
+As long as _FIFO count_ is lower than _FIFO IRQ threshold_, an interrupt is generated.
 To clear the interrupt, first fill the FIFO buffer above the threshold and then clear the CPU interrupt.
 
 ### Register 2 Rate control register
